Fixed an flex box bug in the postCard which stretched the furst line of a post

--- a/src/styles/postCard.scss
+++ b/src/styles/postCard.scss
@@ -38,8 +38,9 @@
         margin-bottom: 1rem;
 
         .info__top {
+          // border: 1px solid blue;
           display: flex;
-          justify-content: space-between;
+          justify-content: flex-start;
           align-items: center;
           margin-bottom: 0.5rem;
 
